--- a/upofly/.settings/org.eclipse.core.resources.prefs
+++ b/upofly/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//models/__init__.py=utf-8
 encoding//models/cliente.py=utf-8
+encoding//models/piloto.py=utf-8
 encoding/__manifest__.py=utf-8
