Modificaciones en varios modelos y workflow para parte de mantenimiento. Se ha cambiado el modelo "Coordenada" por "Localizacion".

--- a/upofly/.settings/org.eclipse.core.resources.prefs
+++ b/upofly/.settings/org.eclipse.core.resources.prefs
@@ -2,7 +2,14 @@ eclipse.preferences.version=1
 encoding//models/__init__.py=utf-8
 encoding//models/aeronave.py=utf-8
 encoding//models/cliente.py=utf-8
+encoding//models/factura.py=utf-8
+encoding//models/linea_de_venta.py=utf-8
+encoding//models/localizacion.py=utf-8
 encoding//models/parteMantenimiento.py=utf-8
 encoding//models/piloto.py=utf-8
 encoding//models/ruta.py=utf-8
+encoding//models/servicio.py=utf-8
+encoding//models/venta.py=utf-8
+encoding//models/vuelo.py=utf-8
+encoding/__init__.py=utf-8
 encoding/__manifest__.py=utf-8
